fix: fixed github link appearance on mobile

--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -143,3 +143,16 @@ body.docs
 @media print
   #header
     display: none
+
+@media screen and (max-width: 900px)
+  a.nav-button
+    &.button
+      padding: 0 1.2em
+      margin-left: 0
+      text-indent: 0.6em
+      &.has-icon
+        position: relative
+        > svg
+          left: 0.1em
+          top: 0.1em
+          width: 1.2em
